text spill bug fix

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -9,6 +9,7 @@
   height: 240px;
   margin-bottom: 40px;
   padding-top: 20px;
+  padding-bottom: 10px;
   -webkit-border-radius:6px;
   -moz-border-radius:6px;
   border-radius:6px;
@@ -344,8 +345,10 @@
 
   .grid article {
     width: 100%;
+    height: auto;
     padding-left: 0;
     padding-right: 0;
+    margin-bottom: 15px;
   }
 
   .grid article.left {
